# boxr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: errors.rs  evaluator.rs  lib.rs  logger.rs  main-cli.rs  main-lalrpop.rs  main-repl.rs  parser.rs  scope.rs  slyther.lalrpop  types.rs
src/rawLexerParser/: lexer.rs  parser.rs
src/types/: builtin.rs  function.rs  macros.rs  mod.rs  scope.rs  userfunctions.rs
tests/: bmi.scm  calculator.scm  carmichael.scm  fib-iter.scm  fib-recursive.scm  gcd.scm  hello-world.scm  is-prime.scm  match-list-example.scm  prng.scm  test.scm  triangle.scm
