[package]
name = "boxr"
version = "0.1.0"
edition = "2021"
default-run = "boxrepl"

[[bin]]
name = "boxr"
path = "src/main-cli.rs"

[[bin]]
name = "boxrepl"
path = "src/main-repl.rs"

[lib]
name = "boxr"
path = "src/lib.rs"

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
lalrpop-util = { version = "0.19.10", features = ["lexer"] }
lazy_static = "1.4.0"
log = "0.4.17"
reedline-repl-rs = "1.0.4"
regex = "1.8.1"

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=mold",
]
