[package]
name = "boxr"
version = "0.1.0"
edition = "2024"
default-run = "boxrepl"

[[bin]]
name = "boxr"
path = "src/main-cli.rs"

[[bin]]
name = "boxrepl"
path = "src/main-repl.rs"

[lib]
name = "boxr"
path = "src/lib.rs"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
lazy_static = "1.5.0"
log = "0.4.28"
reedline-repl-rs = "1.2.1"
regex = "1.12.2"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
